[package]
name = "rust-arachnid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "sqlite" ] }
tokio = { version = "1", features = ["full"] }
scraper = "0.13.0"
tracing = "0.1"
tracing-subscriber = "0.3"
flume = "0.10.14"


[profile.release]
debug = 1