[package]
name = "rust-arachnid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.6.2", features = [ "runtime-tokio-native-tls" , "sqlite", "any" ] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
html5ever = "0.26"
kuchiki = "0.8"
scraper = "0.13.0"
tracing = "0.1"
tracing-subscriber = "0.3"
flume = "0.10.14"
serde_json = "1.0"
clap = { version = "4.0.29", features = ["derive"] }

[profile.release]
debug = 1
